--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Client</title>
-  <base href="/">
+  <link rel="stylesheet" href="https://npmcdn.com/sweetalert2@4.0.15/dist/sweetalert2.min.css">
+  <script src="https://npmcdn.com/sweetalert2@4.0.15/dist/sweetalert2.min.js"></script>
 
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
