--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,9 +7,17 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/material.min.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/animate.css">
+  <link rel="stylesheet" href="assets/css/app.css">
 </head>
 <body>
   <app-root>Loading...</app-root>
   <script type="text/javascript" src="https://connect.facebook.net/en_US/sdk.js"></script>
+  <script src="assets/js/jquery.js"></script>
+  <script src="assets/js/bootstrap.js"></script>
+  <script src="assets/js/material.js"></script>
 </body>
 </html>
